<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.LeaguesActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvRecyclerTeams"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>