<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewItemLeague"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvLeague"
            android:textStyle="bold"
            android:text="Liga Inglesa"
            android:padding="5dp"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="match_parent" />

    </RelativeLayout>

</android.support.v7.widget.CardView>