<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewItemTeam"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBadge"
            android:layout_width="100dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_height="100dp" />
        <TextView
            android:id="@+id/tvTeamName"
            android:textStyle="bold"
            android:text="Aston Villa"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:layout_toRightOf="@id/ivBadge"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvStadiumName"
            android:textStyle="bold"
            android:text="Aston villa Stadium"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:layout_toRightOf="@id/ivBadge"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</android.support.v7.widget.CardView>